force-app/main/default/objects/ContentVersion/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Categoria 1</fullName>
            </value>
            <value>
                <fullName>Categoría 3-4</fullName>
            </value>
            <value>
                <fullName>Categoría 5-6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>