force-app/main/default/objects/ContentVersion/fields/Document_Version_History__c.field-meta.xml
<CustomField>
    <fullName>Document_Version_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Version History</label>
    <referenceTo>DocumentVersionHistory__c</referenceTo>
    <relationshipLabel>Content Versions (Document Version History)</relationshipLabel>
    <relationshipName>Content_Versions1</relationshipName>
    <type>Lookup</type>
</CustomField>