force-app/main/default/objects/ContentVersion/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Relacionado con</label>
    <length>18</length>
    <type>Text</type>
</CustomField>