force-app/main/default/objects/ContentVersion/fields/Posicion__c.field-meta.xml
<CustomField>
    <fullName>Posicion__c</fullName>
    <description>Posición de la imagen en el slide</description>
    <inlineHelpText>Posición de la imagen en el slide</inlineHelpText>
    <label>Posición</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>