force-app/main/default/objects/ContentVersion/fields/PublicadoFTPIdealista__c.field-meta.xml
<CustomField>
    <fullName>PublicadoFTPIdealista__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicado FTP Idealista</label>
    <type>Checkbox</type>
</CustomField>