force-app/main/default/objects/ContentVersion/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoría</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subcategoría 1</fullName>
            </value>
            <value>
                <fullName>Subcategoría 2</fullName>
            </value>
            <value>
                <fullName>Subcategoría 3</fullName>
            </value>
            <value>
                <fullName>Subcategoría 4</fullName>
            </value>
            <value>
                <fullName>Subcategoría 5</fullName>
            </value>
            <value>
                <fullName>Subcategoría 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>