force-app/main/default/objects/ContentVersion/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imagen</fullName>
            </value>
            <value>
                <fullName>Archivo</fullName>
            </value>
            <value>
                <fullName>Plano</fullName>
            </value>
            <value>
                <fullName>Pre-reserva</fullName>
            </value>
            <value>
                <fullName>Justificante de pago</fullName>
            </value>
            <value>
                <fullName>Reserva</fullName>
            </value>
            <value>
                <fullName>Borrador de contrato</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Imagen_carrusel</fullName>
                <label>Imagen carrusel</label>
            </value>
            <value>
                <fullName>Carrusel_lifestyle</fullName>
                <label>Carrusel Lifestyle</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Folleto</fullName>
            </value>
            <value>
                <fullName>Memoria_calidades</fullName>
                <label>Memoria Calidades</label>
            </value>
            <value>
                <fullName>Planos_zonas_comunes</fullName>
                <label>Planos Zonas Comunes</label>
            </value>
            <value>
                <fullName>Carrusel_entorno</fullName>
                <label>Carrusel Entorno</label>
            </value>
            <value>
                <fullName>Pie_de_web</fullName>
                <label>Pie de web</label>
            </value>
            <value>
                <fullName>Imagen_financiera</fullName>
                <label>Imagen Financiera</label>
            </value>
            <value>
                <fullName>Logo Promoción</fullName>
            </value>
            <value>
                <fullName>Plano_PDF</fullName>
            </value>
            <value>
                <fullName>Cuadro_superficies</fullName>
                <label>Cuadro superficies</label>
            </value>
            <value>
                <fullName>Video_Youtube</fullName>
                <label>Video Youtube</label>
            </value>
            <value>
                <fullName>Visita VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>