force-app/main/default/objects/ContentVersion/fields/Tipo_de_inmueble__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_inmueble__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de inmueble</label>
    <referenceTo>Tipo_de_inmueble__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>