force-app/main/default/objects/ContentVersion/fields/Url_Youtube__c.field-meta.xml
<CustomField>
    <fullName>Url_Youtube__c</fullName>
    <description>Identificador del video en Youtube</description>
    <inlineHelpText>Identificador del video en Youtube</inlineHelpText>
    <label>Id Youtube</label>
    <type>Url</type>
</CustomField>