force-app/main/default/objects/ContentVersion/validationRules/Campo_tipo_y_posicion.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_tipo_y_posicion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Tipo__c, &quot;Carrusel_lifestyle&quot;),OR(Posicion__c &lt; 1, Posicion__c &gt; 3))</errorConditionFormula>
    <errorMessage>&quot;La imagen de Carrusel Lifestyle tiene que tener la Posición 1, 2 o 3</errorMessage>
</ValidationRule>