force-app/main/default/objects/ContentVersion/validationRules/VR_PosicionObligatoriaImagen.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PosicionObligatoriaImagen</fullName>
    <active>true</active>
    <description>Si se añade una imagen de carrusel la posición debe ser obligatoria</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Tipo__c, &apos;Imagen_carrusel&apos;),
  ISBLANK(Posicion__c)
)</errorConditionFormula>
    <errorDisplayField>Posicion__c</errorDisplayField>
    <errorMessage>Debe introducir la posición de la imagen en el carrusel</errorMessage>
</ValidationRule>